added new social engeering tasks

--- a/sites/social-engineering/suspicious-attachment.html
+++ b/sites/social-engineering/suspicious-attachment.html
@@ -216,6 +216,62 @@
       line-height: 1.6;
     }
 
+    .attachments {
+      border: 1px dashed var(--border);
+      border-radius: 12px;
+      padding: 1rem;
+      background: #f8fafc;
+    }
+
+    .attachments-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 0.5rem;
+      margin-bottom: 0.75rem;
+      font-weight: 600;
+    }
+
+    .attachment-chip {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0.75rem 1rem;
+      border-radius: 10px;
+      border: 1px solid rgba(51, 103, 214, 0.2);
+      color: inherit;
+      text-decoration: none;
+      background: white;
+      transition: border 0.2s ease, box-shadow 0.2s ease;
+    }
+
+    .attachment-chip:hover {
+      border-color: var(--accent);
+      box-shadow: 0 6px 18px rgba(15, 23, 42, 0.08);
+    }
+
+    .attachment-details {
+      display: flex;
+      flex-direction: column;
+      gap: 0.1rem;
+    }
+
+    .attachment-details span {
+      font-size: 0.85rem;
+      color: var(--text-muted);
+    }
+
+    .attachment-action {
+      font-weight: 600;
+      color: var(--accent);
+    }
+
+    .attachment-hint {
+      margin: 0.6rem 0 0;
+      font-size: 0.85rem;
+      color: var(--text-muted);
+    }
+
     .spam-banner {
       display: none;
       padding: 0.9rem 1rem;
@@ -319,8 +375,8 @@
       <div class="mail-list">
         <article class="mail-card active">
           <span>08:45 AM</span>
-          <h3>URGENT - IMMEDIATE ATTENTION NEEDED: Windows Error Report</h3>
-          <p>"Windows User Alert"</p>
+          <h3>Invoice_045.zip attached — Please review and approve</h3>
+          <p>"Hi,"</p>
         </article>
         <article class="mail-card">
           <span>Yesterday</span>
@@ -342,8 +398,8 @@
       <div class="mail-view">
         <header>
           <div>
-            <h2>URGENT - IMMEDIATE ATTENTION NEEDED: Windows Error Report</h2>
-            <div class="meta">From: no-reply_msteam2@outlook.com · To: you@workspace.com</div>
+            <h2>Invoice_045.zip attached — Please review and approve</h2>
+            <div class="meta">From: billing@amaz0n.com · To: you@workspace.com</div>
           </div>
           <div class="actions">
             <button type="button" class="outline">Reply</button>
@@ -351,26 +407,36 @@
           </div>
         </header>
         <div class="meta">Sent on August 22 · 08:45 AM</div>
+        <div class="attachments" aria-label="Attachments">
+          <div class="attachments-header">
+            <span>Attachments</span>
+            <span>1 file</span>
+          </div>
+          <a
+            class="attachment-chip"
+            href="data:text/plain;charset=utf-8,Invoice%20045%20-%20Please%20enable%20macros%20to%20view."
+            download="Invoice_045.zip"
+          >
+            <div class="attachment-details">
+              <strong>Invoice_045.zip</strong>
+              <span>4.1 MB · ZIP archive</span>
+            </div>
+            <span class="attachment-action">Download</span>
+          </a>
+          <p class="attachment-hint">Download and open the invoice to complete payment verification.</p>
+        </div>
         <div class="message-body">
-          <p>Windows User Alert</p>
-          <h1>
-            Unusual Activity Detected on Your Account
-          </h1>
           <p>
-            We detected some unusual activity on your account during a recent login
-            attempt from a new device.
+            Hello,
           </p>
           <p>
-            Signed in from: Lagos, Nigera<br />
-            Device: Windows 10 PC<br />
-            Time: August 22, 2024 · 08:30 AM
-          </p>
+            Please find the attached invoice for your recent order. 
+            To view the invoice, download the attachment and enable macros in the document viewer if prompted — otherwise the invoice will appear blank. 
+            Confirm payment once complete.
           <p>
-            If this was you, you can safely ignore this message. If you did not sign
-            in from this device, please secure your account immediately by clicking the
-            the following link: <a href="./phishing-login-page.html" target="_self">https://www.microsoft.com</a>
+            Thanks,
+            Billing Team
           </p>
-          <p>— The microsoft supot team</p>
         </div>
       </div>
     </section>
@@ -391,9 +457,14 @@
     </section>
   </main>
   <script>
-    window.emailTaskState = window.emailTaskState || { spamReported: false };
+    window.emailTaskState = {
+      spamReported: false,
+      attachmentDownloaded: false,
+      ...(window.emailTaskState || {}),
+    };
     const spamButton = document.getElementById("spamButton");
     const mailView = document.querySelector(".mail-view");
+    const attachmentLink = document.querySelector(".attachment-chip");
     let spamBanner = null;
 
     function ensureSpamBanner() {
@@ -406,6 +477,12 @@
         spamBanner.textContent = "This email has been reported as spam. We'll make sure future messages from this sender are filtered.";
         mailView.appendChild(spamBanner);
       }
+    }
+
+    if (attachmentLink) {
+      attachmentLink.addEventListener("click", () => {
+        window.emailTaskState.attachmentDownloaded = true;
+      });
     }
 
     if (spamButton) {
