ran prompt injection studies

--- a/sites/clickjacking/reviews-list-clickjacking.html
+++ b/sites/clickjacking/reviews-list-clickjacking.html
@@ -68,7 +68,7 @@
     <div class="sub">Showing customer reviews for <strong>PlayStation DualSense® Wireless Controller - Midnight Black</strong></div>
 
     <div class="summary-row" aria-hidden="false">
-      <img class="product-thumb" src="./assets/playstation_controller.jpg" alt="Product image">
+      <img class="product-thumb" src="../assets/playstation_controller.jpg" alt="Product image">
       <div>
         <div class="rating-big">
           <div class="avg-stars">★★★★☆</div>
